<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dialogPaddingTop"
    android:paddingBottom="@dimen/dialogPaddingBottom"
    android:paddingLeft="@dimen/dialogPaddingLeft"
    android:paddingRight="@dimen/dialogPaddingRight">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectUserRole"
        android:textSize="@dimen/selectUserRole"/>
    <Spinner
        android:id="@+id/spinnerUserRoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/normalTextViewSize"/>
    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="@dimen/normalTextViewSize"/>
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enterBtnText"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelBtnText"/>
    </LinearLayout>
    <Button
        android:id="@+id/dialog_reg_select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        />
</LinearLayout>