<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_role_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/paddin_bottom_reg_choose_role"
    android:paddingLeft="@dimen/padding_left_reg_choose_role"
    android:paddingRight="@dimen/paddnig_right_reg_choose_role"
    android:paddingTop="@dimen/padding_top_reg_choose_role"
    android:orientation="vertical"
    tools:context="kg.acsid.mitapp.ext.ChooseRoleReg">
    <RadioGroup
        android:id="@+id/radio_group_reg_choose_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBtnTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"/>
        <RadioButton
            android:id="@+id/radioBtnStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>
</LinearLayout>
