<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="kg.acsid.mitapp.student.StudentRegistration">
    <TabHost
        android:id="@+id/tabHost"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ScrollView
                    android:id="@+id/stud_main_data_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/first_name"
                            />
                        <EditText
                            android:id="@+id/stud_fname_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"/>
                        <EditText
                            android:id="@+id/stud_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/last_name"/>
                        <EditText
                            android:id="@+id/stud_lname_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </ScrollView>
                <ScrollView
                    android:id="@+id/stud_secondary_data_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"/>
                        <EditText
                            android:id="@+id/stud_phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mail"/>
                        <EditText
                            android:id="@+id/stud_address_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contract"/>
                        <Switch
                            android:id="@+id/switch_is_contract_student"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mail"/>
                        <EditText
                            android:id="@+id/stud_mail_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </ScrollView>
                <ScrollView
                    android:id="@+id/stud_data_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/group"/>
                        <Spinner
                            android:id="@+id/stud_group_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></Spinner>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"/>
                        <EditText
                            android:id="@+id/stud_login_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pass"/>
                        <EditText
                            android:id="@+id/stud_pass_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/reg_stud_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
